# moonshiner

./: .gitignore  AGENTS.md  CLAUDE.md  KICKOFF.md  LICENSE  README.md  SEED_CATALOG.json  SEED_CATALOG.md  catalog-overrides.json  config.json  corpus-version.json  install.sh  moonshiner  moonshiner.py  package.json  pyproject.toml
.github/workflows/: release.yml  seeds-release.yml
docs/: BEHAVIOR_SEED_ROADMAP.md
plans/: instruction-following-round-3.json
schemas/: author_review_verdict.schema.json  behavior_seed.schema.json  review_verdict.schema.json
scripts/: audit_behavior_seeds.py  author_behavior_seeds.py  batch.sh  check.sh  consolidate_wave_authors.sh  expand_behavior_seeds_round2.py  quality_loop.sh  seed-sync.service  seed-sync.timer  stage_key.sh  sync_seeds.sh  update_seed_source.sh
skills/moonshiner-runner/: SKILL.md
src/: audit_seeds.py  author_all_waves.py  author_explicit_waves.py  author_matrix_waves.py  behavior_seed_pipeline.py  behavior_trace.py  build_dataset.py  build_security_dataset.py  canonical_dataset.py  coding-agent-guidance.md  common.py  configuration.py  continue_exhausted_run.py  control_cli.py  corpus.py  dataset_prep.py  expand_next_steps.py  export_hf.py  export_hf_card.py  export_hf_next_steps.py  export_parquet.py  fetch_security_corpus.py  generate_security_traces.py  generate_traces.py  hf_history_maintenance.py  hf_sync.py  import_existing.py  import_security_cases.py  import_seeds.py  infrastructure_repair.py  migrate_canonical_dataset.py  model_profile.py  normalize.py  parquet_publication.py  prepare_local.py  privacy.py  publish.py  publish_preview.py  publish_queue.py  reasoning_stepdown.py  (+17 more)
src/moonshiner_app/: __init__.py  cli.py
src/runtimes/: __init__.py  auth.py  availability.py  base.py  behavior.py  claude_code.py  codex.py  credential_proxy.py  pi.py  synthetic_correction.py  zai_proxy.py
tasks/: behavior-worlds.json
tasks/behavior-seeds/: README.md  behavior-dependency-planning-0001.json  behavior-dependency-planning-0002.json  behavior-dependency-planning-0003.json  behavior-dependency-planning-0004.json  behavior-dependency-planning-0005.json  behavior-dependency-planning-0006.json  behavior-dependency-planning-0007.json  behavior-dependency-planning-0008.json  behavior-dependency-planning-0009.json  behavior-dependency-planning-0010.json  behavior-dependency-planning-0011.json  (+1183 more)
tasks/seeds/cpp-cache-local-layout/files/: CMakeLists.txt  Makefile
tasks/seeds/cpp-cache-local-layout/files/include/: cache_chain.hpp
tasks/seeds/cpp-cache-local-layout/files/src/: cache_chain.cpp
tasks/seeds/cpp-cache-local-layout/files/tests/: behavior_tests.cpp  layout_benchmark.cpp
tasks/seeds/cpp-cmake-policy-upgrade/files/: .gitignore  CMakeLists.txt  Makefile
tasks/seeds/cpp-cmake-policy-upgrade/files/cmake/: TelemetryCodecConfig.cmake.in
tasks/seeds/cpp-cmake-policy-upgrade/files/contracts/: cmake_3_21_target_policy.md
tasks/seeds/cpp-cmake-policy-upgrade/files/include/telemetry/: codec.hpp
tasks/seeds/cpp-cmake-policy-upgrade/files/src/: codec.cpp
tasks/seeds/cpp-cmake-policy-upgrade/files/tests/: check_cmake_contract.py  run_acceptance.sh
tasks/seeds/cpp-cmake-policy-upgrade/files/tests/consumer/: CMakeLists.txt  main.cpp
tasks/seeds/cpp-cmake-policy-upgrade/files/tests/superproject/: CMakeLists.txt
tasks/seeds/cpp-exported-targets/files/: .gitignore  CMakeLists.txt  Makefile
tasks/seeds/cpp-exported-targets/files/cmake/: BeaconQueueConfig.cmake.in
tasks/seeds/cpp-exported-targets/files/contracts/: exported_targets.md
tasks/seeds/cpp-exported-targets/files/include/beacon/: queue.hpp
tasks/seeds/cpp-exported-targets/files/src/: queue.cpp
tasks/seeds/cpp-exported-targets/files/tests/: check_package_contract.py  in_tree.cpp  run_acceptance.sh
tasks/seeds/cpp-exported-targets/files/tests/consumer/: CMakeLists.txt  main.cpp
tasks/seeds/cpp-ownership-raii-move/files/: CMakeLists.txt
tasks/seeds/cpp-ownership-raii-move/files/include/: c_pipeline.h  pipeline.hpp
tasks/seeds/cpp-ownership-raii-move/files/src/: pipeline.cpp
tasks/seeds/cpp-ownership-raii-move/files/tests/: ownership_contract_test.cpp  run_tests.sh
tasks/seeds/cpp-vendored-checksum/files/: .gitignore  CMakeLists.txt  Makefile
tasks/seeds/cpp-vendored-checksum/files/cmake/: ByteShieldLock.cmake  StreamSealConfig.cmake.in  VendorByteShield.cmake
tasks/seeds/cpp-vendored-checksum/files/contracts/: byteshield-2.3.0.md
tasks/seeds/cpp-vendored-checksum/files/include/streamseal/: streamseal.h
tasks/seeds/cpp-vendored-checksum/files/src/: streamseal.cpp
tasks/seeds/cpp-vendored-checksum/files/tests/: check_vendor_contract.py  in_tree.cpp  run_acceptance.sh
tasks/seeds/cpp-vendored-checksum/files/tests/consumer/: CMakeLists.txt  main.cpp
tasks/seeds/py-wheel-data-files/files/: README.md  pyproject.toml
tasks/seeds/py-wheel-data-files/files/src/letterpress/: __init__.py  renderer.py
tasks/seeds/py-wheel-data-files/files/src/letterpress/templates/: welcome.txt
tasks/seeds/py-wheel-data-files/files/tests/: __init__.py  test_installed_artifacts.py  test_source_tree.py
tests/: test_acceptance_schema.py  test_audit_seeds.py  test_auth.py  test_availability.py  test_behavior_seeds.py  test_behavior_trace.py  test_catalog_overrides.py  test_common.py  test_configuration.py  test_control_cli.py  test_credential_proxy.py  test_dataset.py  test_dataset_prep.py  test_distribution_neutrality.py  test_environment_preflight.py  test_export_hf.py  test_harness_contract.py  test_hf_append.py  test_hf_card.py  test_hf_history_maintenance.py  test_import_existing.py  test_import_seeds.py  test_infrastructure_repair.py  test_installed_cli.py  test_judge_parse.py  test_migrate_mixed_schema.py  test_model_profile.py  test_moonshiner.py  test_native_interactions.py  test_normalize.py  test_parquet_publication.py  test_pi_runtime.py  test_pipeline_architecture.py  test_privacy.py  test_publish.py  test_publish_preview.py  test_reasoning_stepdown.py  test_screen_traces.py  test_security_pipeline.py  test_seed_intake.py  (+9 more)
(+7617 files in other folders)
