[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "moonshiner"
version = "0.1.0"
description = "Bounded seed authoring and coding-trace distillation pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Greg Havens"}]
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow>=16"]
huggingface = ["datasets>=3", "huggingface-hub>=0.27"]
trainers = ["transformers>=4.48"]

[project.scripts]
moonshiner = "moonshiner_app.cli:main"

[project.urls]
Repository = "https://github.com/greghavens/moonshiner"
Issues = "https://github.com/greghavens/moonshiner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moonshiner_app"]

[tool.hatch.build.targets.wheel.force-include]
"moonshiner.py" = "moonshiner_app/bundle/moonshiner.py"
"config.json" = "moonshiner_app/bundle/config.json"
"corpus-version.json" = "moonshiner_app/bundle/corpus-version.json"
"SEED_CATALOG.md" = "moonshiner_app/bundle/SEED_CATALOG.md"
"SEED_CATALOG.json" = "moonshiner_app/bundle/SEED_CATALOG.json"
"src" = "moonshiner_app/bundle/src"
"schemas" = "moonshiner_app/bundle/schemas"
"scripts" = "moonshiner_app/bundle/scripts"
"skills" = "moonshiner_app/bundle/skills"
"tasks/seeds" = "moonshiner_app/bundle/tasks/seeds"
