[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "moonshiner"
version = "0.5.23"
description = "Seed authoring, trace distillation, and training dataset preparation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Greg Havens"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["huggingface-hub>=0.27", "pyarrow>=16"]

[project.optional-dependencies]
parquet = ["pyarrow>=16"]
huggingface = ["datasets>=3"]
trainers = ["transformers>=4.48"]

[project.scripts]
moonshiner = "moonshiner_app.cli:main"

[project.urls]
Repository = "https://github.com/greghavens/moonshiner"
Issues = "https://github.com/greghavens/moonshiner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moonshiner_app"]

[tool.hatch.build.targets.wheel.force-include]
"moonshiner.py" = "moonshiner_app/bundle/moonshiner.py"
"config.json" = "moonshiner_app/bundle/config.json"
"package.json" = "moonshiner_app/bundle/package.json"
"corpus-version.json" = "moonshiner_app/bundle/corpus-version.json"
"catalog-overrides.json" = "moonshiner_app/bundle/catalog-overrides.json"
"SEED_CATALOG.md" = "moonshiner_app/bundle/SEED_CATALOG.md"
"SEED_CATALOG.json" = "moonshiner_app/bundle/SEED_CATALOG.json"
"src" = "moonshiner_app/bundle/src"
"schemas" = "moonshiner_app/bundle/schemas"
"scripts" = "moonshiner_app/bundle/scripts"
"skills" = "moonshiner_app/bundle/skills"
"docs/BEHAVIOR_SEED_ROADMAP.md" = "moonshiner_app/bundle/docs/BEHAVIOR_SEED_ROADMAP.md"
"plans" = "moonshiner_app/bundle/plans"
"assets/moonshiner-dataset-banner.png" = "moonshiner_app/bundle/assets/moonshiner-dataset-banner.png"
"assets/kimi-k3-dataset-banner.png" = "moonshiner_app/bundle/assets/kimi-k3-dataset-banner.png"
"tasks/seeds" = "moonshiner_app/bundle/tasks/seeds"
"tasks/behavior-seeds" = "moonshiner_app/bundle/tasks/behavior-seeds"
"tasks/retired-seeds" = "moonshiner_app/bundle/tasks/retired-seeds"
"tasks/behavior-worlds.json" = "moonshiner_app/bundle/tasks/behavior-worlds.json"
