[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "letterpress-templates"
version = "0.1.0"
description = "Tiny text-template renderer"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
